files/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 8448 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8448 -j ACCEPT
-A ufw-user-input -p udp --dport 8448 -j ACCEPT

### tuple ### allow any 3478 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3478 -j ACCEPT
-A ufw-user-input -p udp --dport 3478 -j ACCEPT

### tuple ### allow any 5354 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5354 -j ACCEPT
-A ufw-user-input -p udp --dport 5354 -j ACCEPT

### tuple ### allow udp 1714:1764 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow tcp 1714:1764 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow udp 137 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p udp --dport 137 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow udp 138 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p udp --dport 138 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow tcp 139 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p tcp --dport 139 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow tcp 445 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p tcp --dport 445 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow any 111 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p tcp --dport 111 -s 192.168.1.0/24 -j ACCEPT
-A ufw-user-input -p udp --dport 111 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow any 2049 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p tcp --dport 2049 -s 192.168.1.0/24 -j ACCEPT
-A ufw-user-input -p udp --dport 2049 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow any 13025 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -p tcp --dport 13025 -s 192.168.1.0/24 -j ACCEPT
-A ufw-user-input -p udp --dport 13025 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow tcp 5901 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5901 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 45278 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 45278 -j ACCEPT
-A ufw-user-input -p udp --dport 45278 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
